# DitchTheBell

./: README.md  pyproject.toml  requirements.txt
src/dtbell/: __main__.py  app.py  cache.py  config.py  feed.py
src/dtbell/default/: config.ini  urls
src/dtbell/handlers/: notification_handler.py
